--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,22 +1,10 @@
 <% if current_user %>
-<h1>Your Postings</h1>
 
-<table>
- 
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.content %></td> <br>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-
-<br /> 
-
+<a data-toggle="modal" href="/image/new" class="btn btn-primary btn-large"
+style="color:white;">Upload your profile image</a>
 
 <!-- Button trigger modal for post -->
-  <a data-toggle="modal" href="#myPost" class="btn btn-primary btn-large">New Post to Facebook</a>
+<a data-toggle="modal" href="#myPost" class="btn btn-primary btn-large">New Post to Facebook</a>
 
 <!-- Modal for post -->
 
@@ -27,12 +15,10 @@
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
               <%= f.label :content,class: "modal-title", class: "field" %>
-        </div>
-        
+        </div>   
         <div class= "modal-body">
         <%= f.text_field :content, class: "field",class: "input-xlarge", placeholder: "Please input your posting here" %>
-        </div>
-        
+        </div>     
         <div class="modal-footer">
           <div class="actions">
           <a class='btn' class="close" data-dismiss="modal">Close</a>
@@ -44,5 +30,23 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
+<hr/> 
 
+<!-- table for postings list-->
+<table class="table table-striped">
+ <h1>Your Postings</h1>
+<% @posts.each do |post| %>
+  <tr>
+    <td><%= post.content %></td> <br>
+    <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+<% end %>
+</table>
+<br /> 
+
+<% else %>
+
+  <h3 > Welcome to Facebook posting application! </h3>
+   <h3>Please  <%= link_to "Sign in with Facebook", "/auth/facebook" %>
+  </h3>
 <% end %>
